# cot_compression

./: .gitignore  README.md  latent_cot_compression_survey.md  pyproject.toml
configs/: evaluate.yaml  generate.yaml  prepare_data.yaml  run.yaml  train.yaml
configs/data/: dolci_think_sft_32b_600k.yaml  dolci_think_sft_600k.yaml  dolci_think_sft_7b_600k.yaml  tiny_shakespeare_char.yaml
configs/evaluation/: answer_loss.yaml
configs/hydra/launcher/: snellius_h100.yaml
configs/logging/: wandb.yaml
configs/method/char_gpt/: tiny.yaml
configs/method/qwen3/: 0_6b.yaml  4b.yaml
configs/optim/: adamw.yaml
configs/paths/: default.yaml
configs/training/: default.yaml  sft_full_bf16.yaml
configs/workflow/: evaluate_methods.yaml  precompute_entropies.yaml  sft_train.yaml
data/tiny_shakespeare_char/: input.txt
scripts/: evaluate.py  generate.py  plot_compression_curve.py  plot_compression_sweep.py  plot_logprob_scatter.py  plot_results.py  prepare_data.py  run.py  train.py
src/cot_compression/: __init__.py  compression.py  entropy.py  patching.py
src/cot_compression/data/: __init__.py  answers.py  chat.py  dolci.py
src/cot_compression/reporting/: __init__.py  data.py  plots.py  sweep_stats.py
src/cot_compression/training/: __init__.py  evaluate.py  logging.py  precompute.py  sft.py  sft_loop.py  utils.py
src/research_project_template/: __init__.py
src/research_project_template/data/: __init__.py  module.py  prepare.py  text.py  tokenizer.py
src/research_project_template/methods/: __init__.py  factory.py  generation.py  gpt.py
src/research_project_template/training/: __init__.py  checkpointing.py  evaluate.py  generate.py  logging.py  train.py  utils.py
tests/: test_compression.py  test_configs.py  test_data.py  test_entropy.py  test_methods.py  test_patching.py  test_reporting.py  test_training.py
