[project]
name = "research-project-template"
version = "0.1.0"
description = "A Hydra and PyTorch research project template for student projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=1.26",
    "omegaconf>=2.3",
    "torch>=2.3",
    "tqdm>=4.66",
    "wandb>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_project_template"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.rules]
unresolved-import = "ignore"
