[project]
name = "cot-compression"
version = "0.1.0"
description = "Plain PyTorch experiments for chain-of-thought compression."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.30",
    "datasets>=2.20",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "numpy>=1.26",
    "omegaconf>=2.3",
    "torch>=2.3",
    "tqdm>=4.66",
    "transformers>=4.51.0",
    "wandb>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cot_compression"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.rules]
unresolved-import = "ignore"
